<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:title="@string/explore"
        android:id="@+id/explore"
        android:icon="@mipmap/explore"
        app:actionViewClass="android.widget.ImageView"/>
    <item
        android:title="@string/chat"
        android:id="@+id/live_chat"
        android:icon="@mipmap/live"
        app:actionViewClass="android.widget.ImageView"
        />
    <item
        android:title="@string/gallery"
        android:id="@+id/navigation_gallery"
        android:icon="@mipmap/gallery"
        app:actionViewClass="android.widget.ImageView"
        />
    <item
        android:title="@string/wish"
        android:id="@+id/navigation_wish"
        android:icon="@mipmap/wishlist"
        app:actionViewClass="android.widget.ImageView"
        />
    <item
        android:title="@string/magazines"
        android:id="@+id/navigation_magazines"
        android:icon="@mipmap/e_magazine"
        app:actionViewClass="android.widget.ImageView"/>

</menu>